--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #7931ff;
+    --cor-de-fundo: #ff3180;
     --verde: #5770ff;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
-    --botao-inativo: rgb(98, 92, 167);
+    --botao-inativo: rgb(161, 92, 167);
     --texto-fundo: rgb(101, 95, 163);
 }
 
