--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #ff3180;
+    --cor-de-fundo: #ec5252;
     --verde: #5770ff;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
