--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --cor-de-fundo: #a50d0d;
     --verde: #5770ff;
-    --branco: #FFFFFF;
+    --branco: #351010;
     --botao-ativo: #3A375E;
     --botao-inativo: rgb(255, 248, 209);
     --texto-fundo: rgb(101, 95, 163);
