--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-de-fundo: #a50d0d;
     --verde: #5770ff;
     --branco: #351010;
-    --botao-ativo: #3A375E;
+    --botao-ativo: #793e3e;
     --botao-inativo: rgb(255, 248, 209);
     --texto-fundo: rgb(101, 95, 163);
 }
