--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 
 :root {
-    --cor-de-fundo: #a50d0d;
+    --cor-de-fundo: #611717;
     --verde: #134f88;
     --branco: #ffffff;
     --botao-ativo: #8f4444;
     --botao-inativo: rgb(255, 87, 87);
-    --texto-fundo: rgb(101, 95, 163);
+    --texto-fundo: #a50d0d;
 }
 
 body {
