--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --cor-de-fundo: #611717;
-    --verde: #134f88;
+    --verde: #300404;
     --branco: #ffffff;
     --botao-ativo: #8f4444;
     --botao-inativo: rgb(255, 87, 87);
