--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-de-fundo: #611717;
     --verde: #300404;
     --branco: #ffffff;
-    --botao-ativo: #8f4444;
+    --botao-ativo: #882802;
     --botao-inativo: rgb(255, 87, 87);
     --texto-fundo: #a50d0d;
 }
