--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     --cor-de-fundo: #611717;
     --verde: #300404;
     --branco: #ffffff;
-    --botao-ativo: #882802;
-    --botao-inativo: rgb(255, 87, 87);
+    --botao-ativo: #8f3333;
+    --botao-inativo: rgb(175, 48, 76);
     --texto-fundo: #a50d0d;
 }
 
