--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --cor-de-fundo: #611717;
     --verde: #300404;
     --branco: #ffffff;
-    --botao-ativo: #8f3333;
+    --botao-ativo: #161616;
     --botao-inativo: rgb(175, 48, 76);
     --texto-fundo: #a50d0d;
 }
