--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --branco: #ffffff;
     --botao-ativo: #994747;
     --botao-inativo: rgb(0, 0, 0);
-    --texto-fundo: #a50d0d;
+    --texto-fundo: #751a1a;
 }
 
 body {
